<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TableRow
        android:id="@+id/tablerow_cusion4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </TableRow>

    <TableRow
        android:id="@+id/tablerow_cusion3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cusion_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <TableRow
        android:id="@+id/tablerow_welcomeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView_welcomeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/tabelrow_instructionsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textview_instructionsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </TableRow>

    <TableRow
        android:id="@+id/tablerow_cusion1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cusion_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/tablerow_appsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

    </TableRow>

    <TableRow
        android:id="@+id/tablerow_appsSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

    </TableRow>

    <TableRow
        android:id="@+id/tablerow_cusion2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cusion_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/tablerow_entreeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView_entreesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrees_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/tablerow_entreeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Spinner
            android:id="@+id/entreeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" />

    </TableRow>

    <TableRow
        android:id="@+id/tablerow_dessertsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

    </TableRow>

    <TableRow
        android:id="@+id/tablerow_dessertsSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

    </TableRow>

</LinearLayout>
